public/css/index.css
/* ... */
table {
	margin: 1em 0;
}
table td,
table th {
	padding-right: 1em;
}

pre,
code {
	font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono",
		"Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
		"Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L",
		"Courier New", Courier, monospace;
}
pre {
	font-size: 0.8em;
	line-height: 1.375;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	-moz-tab-size: 2;
	-o-tab-size: 2;
	tab-size: 2;
	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	padding: 1em;
	margin: 1em 0 1em 1em;
	background-color: #f6f6f6;
}

code {
	font-size: 0.8em;
	background-color: var(--lightpink);
}

pre code {
	font-size: 1em;
}

@media not all and (min-resolution: 0.001dpcm) {
	@supports (-webkit-appearance: none) {
		pre {
			margin: 1em 0 1em 1.4em;
		}
	}
}

.highlight-line {
	/* display: block; */
	/* padding: 0.125em 1em; */
	text-decoration: none; /* override del, ins, mark defaults */
	color: inherit; /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
	content: " ";
}
/* avoid double line breaks when using display: block; */
.highlight-line + br {
	display: none;
}

.highlight-line-isdir {
	color: #b0b0b0;
	background-color: #222;
}
.highlight-line-active {
	background-color: #444;
	background-color: hsla(0, 0%, 27%, 0.8);
}
.highlight-line-add {
	background-color: #45844b;
}
.highlight-line-remove {
	background-color: #902f2f;
}

/* Citations w/in Blockquote */

cite {
	font-style: normal;
	font-size: 0.8em;
}

/* Images */
figure {
	margin: 0;
}

img {
	max-width: 100%;
	max-height: 95vh;
	height: auto;
}

figcaption {
	font-family: sans-serif;
	font-size: 0.8em;
	color: var(--darkgray);
}

/* Header */
.home {
	padding: 0 1em;
	font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
	margin: 1em 0; /* 16px /16 */
	font-size: 1em; /* 16px /16 */
	grid-column: 1;
}

.home a[href],
.home a[href]:visited {
	text-decoration: none;
	color: var(--red);
}

@media (min-width: 45em) {
	.home {
		grid-column: content-bleed-start / content-start;
	}
}

@media (min-width: 65em) {
	.home {
		padding: 0;
	}
}

.home :link:not(:hover) {
	text-decoration: none;
}

/* Nav */
.nav {
	padding: 0;
	list-style: none;
	grid-column: 2;
	font-family: var(--font--sans);
}

@media (min-width: 45em) {
	.nav {
		grid-column: content-start / content-bleed-end;
	}
}

.nav-item {
	display: inline-block;
	margin-right: 1em;
}

.nav-item a {
	text-decoration: none;
}

.nav-item a[aria-current="page"] {
	text-decoration: underline;
}

.footer--copyright .nav-item {
	margin: 0 1em 2em 0;
}

.footer--copyright .nav-item a {
	text-decoration: underline;
}

/* Homepage */

.tmpl-home h1 {
	grid-column: 1;
}

@media (min-width: 45rem) {
	.tmpl-home h1 {
		grid-column: content-start / content-end;
	}
}

.tmpl-home h2 {
	grid-column: 1;
}

@media (min-width: 45rem) {
	.tmpl-home h2 {
		grid-column: content-start / content-end;
	}
}

.home--bio {
	grid-column: 1;
}

@media (min-width: 45rem) {
	.home--bio {
		grid-column: content-gutter-start / content-gutter-end;
	}

	.home--bio > img {
		float: left;
		margin: 0 1em 0 0;
		width: 50%;
	}

	.home--bio > p:first-of-type {
		margin-top: 0;
	}
}

@media (min-width: 60rem) {
	.tmpl-home .bookslist,
	.tmpl-home .filmslist {
		grid-column: content-start / content-end;
	}
}

/* Posts list */
.tmpl-posts-list h1 {
	grid-column: 1;
}

@media (min-width: 45rem) {
	.tmpl-posts-list h1 {
		grid-column: content-start / content-bleed-end;
	}
}

.postlist {
	list-style: none;
	padding: 0;
}

@media (min-width: 45rem) {
	.postlist {
		grid-column: content-start / content-end;
	}
}

@media (min-width: 60rem) {
	.postlist {
		font-size: 1.125rem;
	}
}

.postlist-item {
	margin-bottom: 2em;
	border-bottom: 1px solid lightgrey;
	padding-bottom: 2em;
	font-family: var(--font--sans);
}

.postlist-item:last-child {
	border-bottom: 0;
	padding-bottom: 0;
	margin-bottom: 0;
}

.postlist-item .post--meta {
	font-style: italic;
	font-size: 0.9em;
}

.tmpl-home .postlist .postlist-link,
.tmpl-tag-detail .postlist-link,
.tmpl-posts-list .postlist-link {
	font-weight: 600;
}

.postlist-link {
	display: inline-block;
	padding: 0;
	color: var(--red);
}

a[href].postlist-link:visited {
	color: var(--red);
}

.postlist-item-active .postlist-link {
	font-weight: bold;
}

.postlist-link {
	font-size: 1.125em; /* 19px /16 */
}

.postlist-item-title {
	font-size: 1em;
	margin: 0;
}

/* Tags List */
.tag {
	color: var(--red);
}
a[href].tag,
a[href].tag:visited {
	color: var(--red);
}

.tmpl-tags-list h1 {
	grid-column: 1;
}

@media (min-width: 45rem) {
	.tmpl-tags-list h1 {
		grid-column: content-start / content-bleed-end;
	}
}

.tmpl-tags-list .postlist-item {
	margin-bottom: 0;
	border-bottom: none;
	padding-bottom: 0;
}

/* Tag Detail */

.tmpl-tag-detail h1 {
	grid-column: 1;
}

@media (min-width: 45rem) {
	.tmpl-tag-detail h1 {
		grid-column: content-start / content-bleed-end;
	}
}

/* .tmpl-tag-detail .postlist-item {
	margin-bottom: 0;
	border-bottom: none;
	padding-bottom: 0;
} */

/* Warning */
.warning {
	background-color: #ffc;
	padding: 1em 0.625em; /* 16px 10px /16 */
}
.warning ol:only-child {
	margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
	font-family: sans-serif;
	text-decoration: none;
	font-style: normal;
	margin-left: 0.1em;
}
a[href].direct-link,
a[href].direct-link:visited {
	color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
	color: #aaa;
}

/* Post */

body {
	font-family: var(--font--serif);
	line-height: 1.4;
	display: grid;
	grid-template-rows: auto 1fr auto;
}

.container {
	display: grid;
	grid-template-columns: var(--grid--narrow);
	margin: 2em 1em 0 1em;
}
/* ... */

